<resources>
    <string name="app_name">AtividadeAr - Unipar</string>
    <string name="u_img_descriptions">imagem ilustrativa</string>
    <string name="u_btn_login">Entrar</string>
    <string name="u_btn_sign_up">Cadastrar</string>
    <string name="u_txt_hint_user">Email:</string>
    <string name="u_txt_hint_pass">Senha:</string>
    <string name="u_txt_forgout">Esqueceu sua senha?</string>
    <string name="u_txt_sign_up">Cadastre-Se</string>
    <string name="u_btn_salvar">Salvar</string>
    <string name="u_home_page">Home</string>
    <string name="u_config_page">Configurações</string>
    <string name="u_faq_page">Quem Somos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login">admin@admin.com</string>
    <string name="senha_login">admin</string>
    <string name="api_url">https://andersonpadovani.online/api/api.php</string>
    <string name="preference_file_key">andersonpadovani.onlin.PREFERENCE_FILE_KEY</string>
    <string name="faq_text">
        Este é um aplicativo, que foi elaborado pelo aluno Anderson Ramos Padovani, aluno da EAD-Unipar(“Universidade Paranaense”) RA: 09026328.
        Este projeto, foi desenvolvido em Android Studio, com a linguagem em JAVA, utilizando algumas API’s, própria do desenvolvedor,
        para comunicação com banco de dados alocado em nuvem, também era para ter usado a do GoogleMaps, mas por falta de tempo para o desenvolvimento e por não ser item obrigatório acabei optando por não aplicar.
        Todo o projeto está alocado no Github neste link: https://github.com/AndersonPadovani/AtividadeArUnipar, também colocarei em minha página oficial que está em fase de desenvolvimento com link direto ao GIT.
        https://andersonpadovani.online/ - Este também e o endereço utilizado pela API que hospeda o banco de dados do aplicativo!</string>
</resources>