<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/u_preto"
    tools:context=".LoginPage">

    <EditText
        android:id="@+id/txt_nome"
        style="@style/EditTextLogin"
        android:hint="@string/u_txt_hint_user"
        android:text="@string/email_login"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/u_branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/txt_passw"
        style="@style/EditTextLogin"
        android:drawableRight="@drawable/ic_passw"
        android:hint="@string/u_txt_hint_pass"
        android:text="@string/senha_login"
        android:password="true"
        android:inputType="textPassword"
        android:textColorHint="@color/u_branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/txt_esqueci_senha"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/u_txt_forgout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passw" />

    <Button
        android:id="@+id/txt_cadastre_se"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/u_txt_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toEndOf="@+id/txt_esqueci_senha"
        app:layout_constraintTop_toBottomOf="@+id/txt_passw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonLogin"
        android:layout_marginTop="112dp"
        android:text="@string/u_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passw" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="332dp"
        android:layout_height="230dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/u_img_descriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

</androidx.constraintlayout.widget.ConstraintLayout>