<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/u_preto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabItem"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/u_amarelo"
        app:tabTextColor="@color/u_branco">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_home_page" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_faq_page" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/u_amarelo"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="135dp"
                android:layout_marginTop="15dp"
                android:elevation="11dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/txt_card_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_alignStart="@+id/txt_email"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="53dp"
                android:elevation="10dp"
                android:text="andersonpadovani@protonmail.com" />

            <TextView
                android:id="@+id/txt_card_user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_card_user_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-40dp"
                android:layout_marginBottom="22dp"
                android:elevation="10dp"
                android:text="(45) 9 9953-0893" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="52dp"
                android:layout_marginTop="15dp"
                android:text="Email:" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="21dp"
                android:text="Telefone:" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="388dp"
        android:layout_height="236dp"
        android:padding="5dp"
        android:text="@string/faq_text"
        android:textColor="@color/u_branco"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.162" />


</androidx.constraintlayout.widget.ConstraintLayout>